--- a/css/letoile.css
+++ b/css/letoile.css
@@ -63,6 +63,18 @@ input {
     color: var(--black-text) !important;
 }
 
+textarea,
+textarea:focus-visible{
+    text-decoration: none;
+    border: none;
+    outline: none;
+    resize: none;
+}
+
+textarea::-webkit-scrollbar-track{
+    background: none;
+}
+
 body {
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/41.png);
@@ -324,7 +336,18 @@ body {
     width: 1500px;
     height: auto;
     padding-top: 50px;
-    gap: 50px 100px;
+    gap: 50px 110px;
+}
+
+.product{
+    border-radius: 30px;
+}
+
+.product:not(#productModal):hover{
+    border: 1px solid gray;
+    box-shadow: 0px 0px 10px black;
+    width: 298px;
+    height: 428px;
 }
 
 .product,
