--- a/css/modals.css
+++ b/css/modals.css
@@ -26,17 +26,71 @@
 
 #productModal{
     display: none;
-    width: 400px;
-    height: 500px;
+    grid-template-areas: 
+    'exit exit exit'
+    'photo text text'
+    'name text text'
+    'comment buy like';
+    grid-template-rows: 30px 400px 50px 100px;
+    grid-template-columns: 370px 350px 80px;
+    width: 844px;
+    height: 620px;
     z-index: 101;
-    position: absolute;
     border: 1px solid var(--main-color);
     backdrop-filter: blur(50px);
-    left: calc(100% - 1100px);
     position: fixed;
-    top: 200px;
     justify-items: center;
     border-radius: 50px;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: 2px;
+}
+#productModal button{
+    width: 263px;
+    height: 74px;
+    border-radius: 50px;
+    font-size: 36px;
+    font-weight: 400;
+    letter-spacing: 5.22px;
+}
+
+#commentCard{
+    position: fixed;
+    top: 50%;
+    left: 15%;
+    display: none;
+    grid-template-areas: 
+    'comment'
+    'textBlock';
+    grid-template-rows: auto 180px;
+    width: 356px;
+    height: 620px;
+    border-radius: 50px;
+    border: 1px solid var(--main-color);
+    background: rgba(0, 0, 0, 0.20);
+    backdrop-filter: blur(25px);
+    z-index: 101;
+    transform: translate(-50%, -50%);
+}
+
+#commentCard div::-webkit-scrollbar-track{
+    background: none;
+}
+
+.commentMsg{
+    display: grid;
+    grid-template-areas: 'name star'
+    'text text';
+    grid-template-rows: 10px auto;
+    border-top: 1px solid #909090;
+    border-bottom: 1px solid #909090;
+    width: 263px;
+    height: auto;
+    padding: 10px 0 10px 0;
 }
 
 #blackOut{
