--- a/css/profilePage.css
+++ b/css/profilePage.css
@@ -29,7 +29,7 @@
     border-radius: 50px;
     width: 450px;
     height: 730px;
-    border: 1px solid #76417A;
+    border: 1px solid var(--main-color);
     background: rgba(217, 217, 217, 0.10);
     backdrop-filter: blur(25px);
     display: grid;
