--- a/css/modals.css
+++ b/css/modals.css
@@ -107,3 +107,27 @@
 .openModal {
     overflow-y: hidden;
 }
+
+#upper {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    background: var(--main-color);
+    border-radius: 50%;
+    box-shadow: inset 0px 0px 0px 5px var(--bg-color), 0px 0px 0px 5px var(--main-color);
+    right: 70px;
+    bottom: 40px;
+    z-index: 999;
+    text-align: center;
+    font-size: 30px;
+    color: var(--bg-color);
+    -webkit-text-stroke: var(--bg-color) 1px;
+}
+
+#upper:hover {
+    scale: 1.2;
+}
+
+span[name="star"] {
+    filter: brightness(10);
+}
